Add DLQ permanente
